# SwinIR

./: .gitignore  LICENSE  README.md  config.py  dataset.py  inference.py  models.py  prepare_data.py  pyproject.toml  test.py  train.py  trainer.py  utils.py
checkpoints/best/: model.safetensors  state.pth
checkpoints/iter_100000/: model.safetensors  state.pth
tests/: test_metrics.py
