[project]
name = "swinir"
version = "0.1.0"
description = "SwinIR using PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "safetensors>=0.7.0",
    "tensorboard>=2.20.0",
    "thop>=0.1.1.post2209072238",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
	"pytest>=9.0.2",
]

[tool.ruff]
line-length = 120

